[gd_scene load_steps=7 format=3 uid="uid://nd48wm33bs5y"]

[ext_resource type="Script" uid="uid://c7ulxk7tyav7j" path="res://src/scripts/ui/final_screen.gd" id="1_dmslk"]
[ext_resource type="AudioStream" uid="uid://grd3gktbg380" path="res://_assets/music/menu_click_01.wav" id="1_x67fk"]
[ext_resource type="Texture2D" uid="uid://cg4ohw7vyjy20" path="res://_assets/img/fondo_umbra1.png" id="2_6bokh"]
[ext_resource type="Texture2D" uid="uid://ksjfcvi0uas7" path="res://_assets/img/fondo_umbra2.png" id="2_ptekf"]
[ext_resource type="Texture2D" uid="uid://mdx5g8cjja1b" path="res://_assets/img/fondo_umbra3.png" id="4_cdrne"]
[ext_resource type="FontFile" uid="uid://dqixywmlkywhx" path="res://_assets/fonts/Flavors-Regular.ttf" id="5_cdrne"]

[node name="FinalScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_dmslk")
img_final_malo = ExtResource("2_6bokh")
img_final_medio = ExtResource("2_ptekf")
img_final_bueno = ExtResource("4_cdrne")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
expand_mode = 2
stretch_mode = 6

[node name="MarginContainer" type="MarginContainer" parent="TextureRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="TextureRect/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8

[node name="Label" type="Label" parent="TextureRect/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="PlayButton" type="Button" parent="TextureRect/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(256, 0)
layout_mode = 2
theme_override_fonts/font = ExtResource("5_cdrne")
theme_override_font_sizes/font_size = 32
text = "CONTINUAR"

[node name="QuitButton" type="Button" parent="TextureRect/MarginContainer/VBoxContainer"]
visible = false
custom_minimum_size = Vector2(256, 0)
layout_mode = 2
theme_override_fonts/font = ExtResource("5_cdrne")
theme_override_font_sizes/font_size = 32
text = "SALIR"

[node name="Label2" type="Label" parent="TextureRect/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label3" type="Label" parent="TextureRect/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label4" type="Label" parent="TextureRect/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label5" type="Label" parent="TextureRect/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="PanelContainer" type="PanelContainer" parent="TextureRect/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Texto" type="Label" parent="TextureRect/MarginContainer/PanelContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("5_cdrne")
theme_override_font_sizes/font_size = 35
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true

[node name="sfx" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("1_x67fk")
volume_db = 4.0

[connection signal="pressed" from="TextureRect/MarginContainer/VBoxContainer/PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="TextureRect/MarginContainer/VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
